flambda-backend/tests/backend/zero_alloc_checker/fail3.output
File "fail3.ml", line 2, characters 5-15:
Error: Annotation check for zero_alloc strict failed on function Fail3.test (camlFail3.test_HIDE_STAMP)
