flambda-backend/tests/backend/zero_alloc_checker/fail3.ml
(* Always inlined from a different file *)
let[@zero_alloc strict] test n = T3.test4 n
